--- a/index.html
+++ b/index.html
@@ -163,7 +163,12 @@ also loves working alongside different peaple.
                 <div class="card-text">
                     <h1>Languages</h1>
                     <br>
-                    <p>English,Marathi,Telugu,French</p>
+                    <p>English
+                    </b>
+                      Marathi
+                  </b>
+                      Telugu
+                      French</p>
                 </div>
 
                 
